# git-diff-type

./: .gitignore  README.md  README_CH.md  commit_labeler.py  dedupe.py  export_model.py  gca.spec  gca_cli.py  gca_installer.iss  heuristics.py  import_external.py  miner.py  predict.py  train_baseline.py  train_enhanced.py  verify_export.py
gca-rs/: Cargo.toml  gen_fixtures.py
gca-rs/src/: features.rs  git.rs  heuristics.rs  main.rs  model.rs
gca-rs/tests/: parity.rs
utils/: find_dups.py
