[package]
name = "gca-rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gca"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dialoguer = "0.11"
once_cell = "1"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3
